// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Text has a helptext 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value=""></fieldset><span class="form-text">Type something</span>
  </div>
</div>
`;

exports[`Field Text has a label 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset>
      <legend>
        <p class="ddm-label">label</p>
      </legend><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value="">
    </fieldset>
  </div>
</div>
`;

exports[`Field Text has a placeholder 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" name="textField" placeholder="Placeholder" type="text" class="form-control ddm-field-text" value=""></fieldset>
  </div>
</div>
`;

exports[`Field Text has a spritemap 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value=""></fieldset>
  </div>
</div>
`;

exports[`Field Text has a value 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value="value"></fieldset>
  </div>
</div>
`;

exports[`Field Text has an id 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" id="ID" name="textField" type="text" class="form-control ddm-field-text" value=""></fieldset>
  </div>
</div>
`;

exports[`Field Text is not readOnly 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value=""></fieldset>
  </div>
</div>
`;

exports[`Field Text is not required 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value=""></fieldset>
  </div>
</div>
`;

exports[`Field Text renders Label if showLabel is true 1`] = `
<div class="react-component-adapter">
  <div class="form-group" data-field-name="textField">
    <fieldset>
      <legend>
        <p class="ddm-label">text</p>
      </legend><input aria-label="text" name="textField" type="text" class="form-control ddm-field-text" value="">
    </fieldset>
  </div>
</div>
`;
